--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teste",
-  "version": "14.13.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +13,8 @@
     "http-errors": "~1.6.3",
     "ibm-watson": "^5.7.1",
     "morgan": "~1.9.1"
+  },
+  "engines":{
+    "node": "14.13.0"
   }
 }
